syntax = "proto3";

package transfer.v1;

option go_package = "project/pkg/pb;pb";

import "google/api/annotations.proto";

service TransferService {
  rpc SendMoney (SendMoneyRequest) returns (SendMoneyResponse) {
    option (google.api.http) = {
      post: "/v1/transfer/send"
      body: "*"
    };
  }

  rpc ListTransactions (ListTransactionsRequest) returns (ListTransactionsResponse) {
    option (google.api.http) = {
      get: "/v1/transfer/{user_id}/transactions"
    };
  }

  rpc GetBalance (GetBalanceRequest) returns (GetBalanceResponse) {
    option (google.api.http) = {
      get: "/v1/transfer/{user_id}/balance"
    };
  }

  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/login"
      body: "*"
    };
  }

  rpc Logout (LogoutRequest) returns (LogoutResponse) {
    option (google.api.http) = {
      get: "/v1/auth/{user_id}/logout"
    };
  }
}

message SendMoneyRequest {
  int64 from = 1;   
  int64 to = 2;
  int64 amount = 3;
}

message SendMoneyResponse {
  bool success = 1;
  string error_message = 2;
}

message ListTransactionsRequest {
  int64 user_id = 1;
}

message Transaction {
  int64 id = 1;
  int64 from = 2;
  int64 to = 3;
  int64 amount = 4;
}

message ListTransactionsResponse {
  int64 number = 1;
  repeated Transaction transactions = 2;
}

message GetBalanceRequest {
  int64 user_id = 1;
}

message GetBalanceResponse {
  int64 user_id = 1;
  int64 balance = 2;
}

message LoginRequest {
  int64 username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

message LogoutRequest {
  int64 user_id = 1;
}

message LogoutResponse {
  bool success = 1;
}
